--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,6 +20,9 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
         vim \
         wget \
         zip \
+        python-is-python3 \
+        python3 \
+        python3-pip \
     && rm -rf /var/lib/apt/lists/* \
     && localedef -i en_NZ -c -f UTF-8 -A /usr/share/locale/locale.alias en_NZ.UTF-8
 
@@ -33,30 +36,19 @@ RUN curl -LO https://dl.k8s.io/release/$KUBECTL_VERSION/bin/linux/amd64/kubectl 
 
 # copy in ood k8s utils
 ARG UTILS_HASH=6298fb01f7a7c66a8454e3f0fd74437a32491423
-RUN git clone https://github.com/nesi/training-environment-k8s-utils.git /opt/ood-k8s-utils \
-    && cd /opt/ood-k8s-utils \
-    && git checkout $UTILS_HASH \
-    && chmod +x /opt/ood-k8s-utils/files/* \
-    && mv /opt/ood-k8s-utils/files/* /bin/ \
-    && rm -rf /opt/ood-k8s-utils
-
-# install miniconda
-RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O /miniconda.sh \
-    && bash /miniconda.sh -b -p /opt/miniconda3 \
-    && rm -f /miniconda.sh
-
-# copy the repo source (e.g. notebooks) to the container image
-ARG ML101_HASH="4fd0340acf877a634fd0b0eac4cc0eeffe57fc66"
 RUN git clone https://github.com/nesi/ml101_workshop.git /opt/sklearn_tutorial \
     && cd /opt/sklearn_tutorial \
     && git checkout $ML101_HASH \
-    && rm -rf /opt/sklearn_tutorial/.git \
-    && . /opt/miniconda3/etc/profile.d/conda.sh \
+    && rm -rf /opt/sklearn_tutorial/.git
+
+RUN git clone https://github.com/nicholson-consulting/indigidata_nlp_training.git /opt/indigi_data \
+    && pip3 --no-cache-dir install nltk \
+    && cd /opt/indigi_data \
+    && rm -rf /opt/indigi_data/.git
+
+RUN . /opt/miniconda3/etc/profile.d/conda.sh \
     && conda config --set auto_activate_base false \
     && conda env create -f /opt/sklearn_tutorial/environment.yml -p /var/lib/skl_tut \
     && echo ". /opt/miniconda3/etc/profile.d/conda.sh" > /etc/profile.d/conda.sh \
     && echo "conda activate /var/lib/skl_tut" >> /etc/profile.d/conda.sh \
     && conda clean -afy
-    
-
-    
