--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,15 +36,26 @@ RUN curl -LO https://dl.k8s.io/release/$KUBECTL_VERSION/bin/linux/amd64/kubectl 
 
 # copy in ood k8s utils
 ARG UTILS_HASH=6298fb01f7a7c66a8454e3f0fd74437a32491423
+RUN git clone https://github.com/nesi/training-environment-k8s-utils.git /opt/ood-k8s-utils \
+    && cd /opt/ood-k8s-utils \
+    && git checkout $UTILS_HASH \
+    && chmod +x /opt/ood-k8s-utils/files/* \
+    && mv /opt/ood-k8s-utils/files/* /bin/ \
+    && rm -rf /opt/ood-k8s-utils
+
+# Install ML101
+ARG UTILS_HASH=6298fb01f7a7c66a8454e3f0fd74437a32491423
 RUN git clone https://github.com/nesi/ml101_workshop.git /opt/sklearn_tutorial \
     && cd /opt/sklearn_tutorial \
     && git checkout $ML101_HASH \
     && rm -rf /opt/sklearn_tutorial/.git
 
+# Install ML101
 RUN git clone https://github.com/nicholson-consulting/indigidata_nlp_training.git /opt/indigi_data \
     && pip3 --no-cache-dir install nltk \
     && cd /opt/indigi_data \
     && rm -rf /opt/indigi_data/.git
+
 
 RUN . /opt/miniconda3/etc/profile.d/conda.sh \
     && conda config --set auto_activate_base false \
@@ -52,3 +63,4 @@ RUN . /opt/miniconda3/etc/profile.d/conda.sh \
     && echo ". /opt/miniconda3/etc/profile.d/conda.sh" > /etc/profile.d/conda.sh \
     && echo "conda activate /var/lib/skl_tut" >> /etc/profile.d/conda.sh \
     && conda clean -afy
+    
