conda from ml101 enironment file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -65,7 +65,7 @@ RUN . /opt/miniconda3/etc/profile.d/conda.sh \
     && conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/main \
     && conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/r \
     && conda env create -f /opt/sklearn_tutorial/environment.yml -p /var/lib/skl_tut \
-    && conda run -p /var/lib/skl_tut pip3 install --no-cache-dir nltk \
+#    && conda run -p /var/lib/skl_tut pip3 install --no-cache-dir nltk \
     && echo ". /opt/miniconda3/etc/profile.d/conda.sh" > /etc/profile.d/conda.sh \
     && echo "conda activate /var/lib/skl_tut" >> /etc/profile.d/conda.sh \
     && conda clean -afy
